  - Various optimizations for painting and display (WIP), including
    parallelized painting code.
  - New "Misc" group to the Dashboard dock, with currently only a
    "Mipmapped" field showing the total size of processed mipmapped
    data.
  - Plug-ins debugging on crashes through --stack-trace-mode CLI option
    improved to handle more case.

User interface:

  - Lighter and Grey themes remove for now, Dark theme rewritten from
    scratch to get rid of various usability issues and glitches.
  - New GimpToolGyroscope on-canvas control, currently used for
    the Panorama Projection filter. The widget provides on-canvas
    interaction for 3D rotation (yaw, pitch, roll).

Configurability:

  - In Preferences > Dialog Defaults, new section "Filter Dialogs"
    created to customize various common features of filters, such as
    recent settings and advanced color options.
  - Do not default to last used filter settings, but allow this behavior
    in Preferences > Dialog Defaults, with checkbox "Default to the last
    used settings".

Tools:

  - Color used in the Smudge tool is now added to the color history.

Assets / Resources:

  - Adding 4K UHD in document templates (and fixing 4K DCI).

Building:

  - New --enable-bundled-mypaint-brushes option in configure to decide
    whether to use the configure-time installation path of MyPaint
    brushes, or use a path relative to GIMP installation prefix
    (typically for bundled binaries, such as on Windows or macOS).
  - Detect freetype2 using pkg-config (`freetype-config` is on its way
    out in various distributions apparently).
  - Appdata now installed to $PREFIX/share/metainfo/

Translations:

  - 7 translations were updated: Arabic, Catalan, French, Italian,
    Polish, Russian, Swedish.

Overview of Changes from GIMP 2.9.8 to GIMP 2.10.0 RC1
======================================================

Core:

  - New dashboard dockable: shows the current GEGL cache and swap sizes