@@ -138,15 +138,16 @@
           including parallelized painting code.</_li>
           <_li>Symmetries are now preserved in XCF files (saved as image
           parasites).</_li>
-          <_li>Light and Dark themes rewritten from scratch to get rid
-          of various usability issues</_li>
+          <_li>"Light" and "Dark" themes rewritten from scratch to get
+          rid of various usability issues. "Lighter" and "Darker" themes
+          removed.</_li>
           <_li> New GimpToolGyroscope on-canvas control, currently used
           for the Panorama Projection filter. The widget provides
           on-canvas interaction for 3D rotation (yaw, pitch, roll).</_li>
-          <_li>Plug-ins debugging improved to output stack traces from
+          <_li>Plug-in debugging improved to output stack traces from
           plug-ins with --stack-trace-mode command line option not only
-          on receiving signals but also when "fatal-warnings" debug key
-          is set.</_li>
+          on receiving signals but also on warnings and critical errors
+          when "fatal-warnings" debug key is set.</_li>
         </ul>
         <_p>For more information, see https://www.gimp.org/news/2018/04/14/gimp-2-10-rc2-released/</_p>
       </description>
